--- a/package/bvn_package/pubspec.yaml
+++ b/package/bvn_package/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
-  get: ^4.6.5
+  dio: ^5.1.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
