--- a/package/bvn_package/pubspec.yaml
+++ b/package/bvn_package/pubspec.yaml
@@ -11,8 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+  flutter_image_compress: ^2.0.4
+  path_provider: ^2.1.0
   dio: ^5.1.1
   http: ^0.13.5
+  mime: ^1.0.4
 
 dev_dependencies:
   flutter_test:
