--- a/package/bvn_package/pubspec.yaml
+++ b/package/bvn_package/pubspec.yaml
@@ -74,5 +74,17 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: br_bold
+      fonts:
+        - asset: fonts/br_bold.ttf
+
+    - family: br_regular
+      fonts:
+        - asset: fonts/br_regular.ttf
+
+    - family: br_light
+      fonts:
+        - asset: fonts/br_light.ttf
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
