--- a/package/bvn_package/pubspec.yaml
+++ b/package/bvn_package/pubspec.yaml
@@ -1,6 +1,6 @@
-name: bvn_selfie
+name: raven_verification
 description: A new Flutter project.
-version: 0.0.1
+version: 0.0.2
 homepage:
 
 environment:
@@ -17,6 +17,8 @@ dependencies:
   http: ^0.13.5
   mime: ^1.0.4
   fluttertoast: ^8.2.2
+  flutter_svg: ^2.0.7
+  camera: ^0.10.5+3
 
 dev_dependencies:
   flutter_test:
