--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  bvn_selfie:
+  raven_verification:
    path: ./package/bvn_package
   google_mlkit_barcode_scanning: ^0.8.0
   flutter_barcode_scanner: ^2.0.0
-  camera: ^0.10.5+2
+  camera: ^0.10.5+3
   
   
 
