--- a/package/bvn_package/pubspec.yaml
+++ b/package/bvn_package/pubspec.yaml
@@ -1,10 +1,10 @@
 name: raven_verification
-description: A new Flutter project.
-version: 0.0.2
+description: a flutter plugiin for BVN verification in Nigeria
+version: 0.0.4
 homepage:
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=2.19.6 <4.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
@@ -19,6 +19,7 @@ dependencies:
   fluttertoast: ^8.2.2
   flutter_svg: ^2.0.7
   camera: ^0.10.5+3
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
