--- a/package/bvn_package/pubspec.yaml
+++ b/package/bvn_package/pubspec.yaml
@@ -1,6 +1,6 @@
 name: raven_verification
-description: a flutter plugiin for BVN verification in Nigeria
-version: 0.0.68
+description: a flutter plugin for BVN verification in Nigeria
+version: 0.0.7
 homepage:
 
 environment:
@@ -14,7 +14,7 @@ dependencies:
   flutter_image_compress: ^1.1.3
   path_provider: ^2.1.0
   dio: ^5.1.1
-  http: ^0.13.5
+  http: ^1.1.0
   mime: ^1.0.4
   flutter_svg: ^2.0.7
   camera: ^0.10.5+3
